fix some layout problems on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,7 @@
 html,
 body,
 :root {
-  @apply min-h-screen;
+  @apply min-h-dvh;
 }
 
 @layer base {
